[package]
name = "my_blog"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "HtmlElement",
  "Window",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true